test/features/errors/semantic/e1032_self_in_static.spl
# E1032: Self in Static Context

Feature: E1032 - Self Used in Static Context
  As a Simple compiler
  I want to detect `self` used in static methods
  So that static methods don't access instance data

  Background:
    Given I have the Simple compiler

  Scenario: Using self in static method
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        static fn create() -> Counter:
          self.count = 0  # Error: self not available in static
          Counter { count: 0 }
      '''
    Then I should see error E1032 at line 6
    And the error message should be "`self` cannot be used in static context"
    And the label should indicate "`self` not available here"
    And the help should suggest "static methods cannot access `self`"

  Scenario: Valid static method without self
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        static fn new() -> Counter:
          Counter { count: 0 }
      '''
    Then compilation should succeed

  Scenario: Valid instance method with self
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        fn get_count() -> i32:
          self.count  # OK: instance method
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      impl Counter:
        static fn test():
          print(self.count)
      '''
    Then I should see error E1032
    And the error message should contain "정적 컨텍스트에서 Self 사용"
